--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,7 +97,7 @@
   @apply !p-6 dark:!bg-boxdark dark:!text-bodydark dark:!shadow-8 2xsm:!w-auto;
 }
 .flatpickr-day {
-  @apply dark:!text-bodydark dark:hover:!border-meta-4 dark:hover:!bg-meta-4;
+  @apply dark:!text-bodydark :!border-meta-4 :!bg-meta-4;
 }
 .flatpickr-months .flatpickr-prev-month,
 .flatpickr-months .flatpickr-next-month {
@@ -167,7 +167,7 @@ span.flatpickr-weekday,
 }
 
 .map-btn .jvm-zoom-btn {
-  @apply flex items-center justify-center w-7.5 h-7.5 rounded border border-stroke dark:border-strokedark hover:border-primary dark:hover:border-primary bg-white hover:bg-primary text-body hover:text-white dark:text-bodydark dark:hover:text-white text-2xl leading-none px-0 pt-0 pb-0.5;
+  @apply flex items-center justify-center w-7.5 h-7.5 rounded border border-stroke  hover:border-primary bg-white hover:bg-primary text-body hover:text-white text-2xl leading-none px-0 pt-0 pb-0.5;
 }
 .mapOne .jvm-zoom-btn {
   @apply left-auto top-auto bottom-0;
@@ -195,7 +195,7 @@ span.flatpickr-weekday,
   @apply line-through;
 }
 .taskCheckbox:checked ~ .box {
-  @apply bg-primary border-primary dark:border-primary;
+  @apply bg-primary border-primary ;
 }
 
 .custom-input-date::-webkit-calendar-picker-indicator {
